2022-09-13 update: formatted tests (#100)